Button alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -356,8 +356,10 @@ Home page
   filter: grayscale(100%);
 }
 
-.banner .content {
-  padding: 2em;
+@media screen and (min-width: 768px) {
+  .banner .content {
+    padding: 2em;
+  }
 }
 
 .banner .content p {
@@ -372,12 +374,18 @@ Home page
 Page content
 ---------------------------------------*/
 .button {
+  display: flex;
+  justify-content: flex-start;
 	margin-top: 5em;
-	text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .button {
+    justify-content: space-between;
+  }
 }
 
 .button a {
-	display: inline-block;
 	margin: .5em;
 	padding: .5em 1em;
 	border: 1px solid hsl(0, 10%, 90%);
